pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxDuplicateProperty2.pkl
local source {
  foo = 1
}

res {
  foo = 2
  ...source
}
